data/derived/comb/progs/unify/prog2655.ml.out
Characters 75-91:
  | h :: t -> bigAdd( (mulByDigit h a) a) in
                      ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
